--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: echo-server
-          image: jmalloc/echo-server
+          image: node
           ports:
             - name: http-port
               containerPort: 8080
